Style modification , the css is more readable. Still hasn't fixed one minor glitch to have the exact same style as the other pages

--- a/css/add.css
+++ b/css/add.css
@@ -29,35 +29,30 @@ body {
 
 
 
-#plusbut{
-  margin-left: 1em;
-  top: 0;
-  left: 80%;
-  width: 19.9%;
+
+
+button {
+  text-align: center;
+  font-size: 1.8em;
   height: 100%;
   background-color: inherit;
   border: 2px solid white;
   border-radius: 0;
   color: white;
-  text-align: center;
   text-decoration: none;
-  font-size: 25px;
   font-family: inherit;
-  outline: none;
+  font-size: 1.8em;
+  padding: 8px;
   -webkit-transition: font-weight .5s, border-radius 0.5s, background-color 1s;
 }
 
-
-
-#plusbut:hover{
-background-color: rgba(0,0,0,0.1);
-border-radius: 2em;
-font-weight: 900;
-cursor: pointer;
-background-color: white;
-color: all.background-color;
--webkit-transition: font-weight .5s, border-radius 0.5s, background-color 1s;
-
+button:hover{
+  background-color: rgba(0,0,0,0.1);
+  border-radius: 2em;
+  cursor: pointer;
+  background-color: white;
+  color: all.background-color;
+  -webkit-transition: font-weight .5s, border-radius 0.5s, background-color 1s;
 }
 
 option{
@@ -103,28 +98,6 @@ input {
   color: white;
   padding-left: 2%;
   outline: none;
-}
-#word1:focus {
-  background-color: rgba(0,0,0,0.1);
-}
-
-
-#trad1 {
-  top: 0;
-  left: -2px;
-  width: 15%;
-  height: 91%;
-  border: none;
-  background-color: inherit;
-  border: 2px solid white;
-  font-family: inherit;
-  font-size: 25px;
-  color: white;
-  padding-left: 2%;
-  outline: none;
-}
-#trans1:focus {
-  background-color: rgba(0,0,0,0.1);
 }
 
 #titre{
@@ -191,30 +164,3 @@ margin-right: auto;
 
 }
 
-#submitbut {
-  margin-left: 1em;
-  top: 0;
-  left: 80%;
-  width: 19.9%;
-  height: 100%;
-  background-color: inherit;
-  border: 2px solid white;
-  border-radius: 0;
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  font-size: 25px;
-  font-family: inherit;
-  outline: none;
-  -webkit-transition: font-weight .5s, border-radius 0.5s, background-color 1s;
-}
-
-#submitbut:hover {
-background-color: rgba(0,0,0,0.1);
-border-radius: 2em;
-font-weight: 900;
-cursor: pointer;
-background-color: white;
-color: all.background-color;
--webkit-transition: font-weight .5s, border-radius 0.5s, background-color 1s;
-}
